--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
             <img src="assets/images/profile.jpg" alt="个人照片" class="profile-image">
             <div class="profile-info">
                 <h2>姓名</h2>
-                <p>简短的个人简介内容。</p>
+                <p>我今年22岁，爱好健身。</p>
             </div>
         </section>
         <section class="education">
             <h2>教育经历</h2>
             <ul>
-                <li>大学名称 - 学位名称（毕业年份）</li>
-                <li>高中名称（毕业年份）</li>
+                <li>华中农业大学 - 硕士研究生（2024年9月 - 2027年6月）</li>
+                <li>湖南农业大学 - 本科（2020年9月 - 2024年6月）</li>
             </ul>
         </section>
         <section class="honors">
             <h2>曾获荣誉</h2>
             <ul>
-                <li>荣誉名称1</li>
-                <li>荣誉名称2</li>
+                <li>校级一等奖学金</li>
+                <li>知识竞赛二等奖</li>
             </ul>
         </section>
         <section class="contact">
             <h2>联系方式</h2>
-            <p>邮箱：your-email@example.com</p>
-            <p>电话：+123456789</p>
+            <p>电话：19848032193</p>
+            <p>邮箱：1217673878@qq.com</p>
         </section>
     </main>
     <footer>
