--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     </header>
     <main>
         <section class="profile">
-            <img src="assets/images/profile.jpg" alt="个人照片" class="profile-image">
             <div class="profile-info">
-                <h2>姓名</h2>
+                <h2>孙小康</h2>
                 <p>我今年22岁，爱好健身。</p>
             </div>
         </section>
@@ -40,7 +39,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 你的名字</p>
+        <p>&copy; 2025 孙小康</p>
     </footer>
     <script src="script.js"></script>
 </body>
